# Stockfish

./: CMakeLists.txt
src/: PCAlgorithm.cpp  PCAlgorithm.hpp
